apps/base/pp-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy-proto
  namespace: pp-test
spec:
  selector:
    app: nginx-proxy-proto
  ports:
    - port: 80
      targetPort: 80
